# reinforcement-learning-games

./: README.md  pyproject.toml  test.ipynb
.github/workflows/: ci.yaml
.github/workflows/cd/: ci.yaml
blackjack/: blackjack_gym.py  game.py
blackjack/data/: constants.py
blackjack/functions/: score.py
blackjack/models/: deck.py  hand.py
learning/: td.ipynb
tests/blackjack_tests/: test_deck.py  test_game.py  test_hand.py
